fix(footer): collapses and doesn't float in a strange way now

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -65,14 +65,21 @@ margin-right: .5rem;
 **********************************************************
  */
 
+
 .site-footer {
 flex: 3;
 background-color: $grey-color-dark;
-padding: .5rem;
 color: #aaa;
 text-decoration: none;
+max-height: 2rem;
+line-height: 2rem;
+overflow-x: hidden;
+overflow-y: auto;
+padding-top: .1rem;
 }
 
+.trigger {
+}
 /**
  * Pagination   **********************************************************
  */
